# dsm-jobs

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.ps1  domain_screen.py  find_admin_jobs.py  index.html  jobs.json  manifest.webmanifest  meta.json  portal.json  providers.py  pyproject.toml  requirements-dev.txt  scam_blocklist.txt  scam_blocklist_autogen.txt  socket.yml
.claude/hooks/: session-start.sh
.github/: dependabot.yml
.github/scripts/: consensus_tally.py
.github/workflows/: ats-probe.yml  auto-merge-guard.yml  camera.yml  ci.yml  claude-repair.yml  claude-review.yml  claude.yml  companion-eval.yml  consensus.yml  edge-checks.yml  guard.yml  health.yml  push-followups.yml  scan.yml  semgrep.yml  source-health.yml  voice-deploy.yml
_astro/: index.DeuiwSUq.css  index.astro_astro_type_script_index_0_lang.Bh7lsq3d.js
agent/: ERRORS.md  GAPS.md  RUNBOOK.md
app/: astro.config.mjs  downlevel.mjs  package-lock.json  package.json
app/public/: .nojekyll  resources.json  sw.js
docs/: AGENT-OS.md  DECISION-MATRIX.md  DESIGN-BRIEF.md  HANDOFF.md  LOCAL-SECRETS.md  SUPABASE-PRESERVATION-RUNBOOK.md  rudy-frontier-experience-plan.md
portal/: README.md  __init__.py  push.py  schema.sql
scripts/: ats_probe.py  auto_prune_feeds.py  generate_rudy_sayings.py  snapshot_supabase.py  source_health.py  verify_supabase_schema.ps1  verify_supabase_schema.py  verify_voice_readiness.py
supabase/: config.toml
tests/: test_ats_probe.py  test_consensus_tally.py  test_css_lint.py  test_domain_screen.py  test_find_admin_jobs.py  test_frontend_static_guards.py  test_invariants_end_to_end.py  test_js_smoke.py  test_portal_and_features.py  test_providers.py  test_source_health.py  test_supabase_enforcement.py  test_verify_supabase.py  test_voice_readiness.py
verify/: README.md  camera.py  docx_roundtrip.mjs  js_smoke.js  pdfjs_sri.py  report.json  requirements.txt  setup-web.sh
verify/css/: lint_css.py  (+3 more)
web/: manifest.webmanifest  sw.js
(+39 files in other folders)
